# binance_elt

./: .gitignore  Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
dbt_binance/: dbt_project.yml  profiles.yml
dbt_binance/models/example/: sources.yml
dbt_binance/models/prices/: average_daily_ticker_prices.sql  dim_date.sql  dim_tickers.sql  fact_average_daily_ticker_prices.sql  fact_daily_account_value.sql  fact_daily_tickers_quantity.sql  fact_ticker_prices.sql  sources.yml
dbt_binance/seeds/: name_mapping.csv
infrastructure/: fargate.tf  iam.tf  lambda.sns.tf  lambda.tf  main.tf  sns.tf  variables.tf  vpc.tf
infrastructure/AWS/: backend.tf  lambda.tf  lambda_triggers.tf  sns.tf  variables.tf
infrastructure/GCP/: backend.tf  bigquery.tf  main.tf  variables.tf
lambda/: config.yml  main.py  schemas.py  utils.py
scripts/: run_dbt.sh
