[project]
name = "binance"
version = "0.1.0"
description = ""
authors = [{ name = "nsamardzic13", email = "nikola.samardzic1997@gmail.com" }]
requires-python = ">=3.10, <3.12"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "pyyaml>=6.0.1,<7",
    "boto3>=1.34.151,<2",
    "google-cloud-bigquery>=3.25.0,<4",
    "google-auth>=2.33.0,<3",
    "google-auth-oauthlib>=1.2.1,<2",
    "google-auth-httplib2>=0.2.0,<0.3",
    "dbt-core>=1.8.5,<2",
    "dbt-bigquery>=1.8.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
